--- a/interestingUI/index.css
+++ b/interestingUI/index.css
@@ -72,13 +72,13 @@ header {
     #wrap .cube.reverse-back {
       transform: rotateX(180deg) rotateY(0deg) rotateZ(-180deg); }
     #wrap .cube.reverse-right {
-      transform: rotateX(0deg) rotateY(270deg) rotateZ(0deg); }
+      transform: rotateX(360deg) rotateY(270deg) rotateZ(0deg); }
     #wrap .cube.reverse-left {
-      transform: rotateX(0deg) rotateY(90deg) rotateZ(0deg); }
+      transform: rotateX(0deg) rotateY(90deg) rotateZ(360deg); }
     #wrap .cube.reverse-top {
-      transform: rotateX(-90deg) rotateY(0deg) rotateZ(0deg); }
+      transform: rotateX(-90deg) rotateY(0deg) rotateZ(360deg); }
     #wrap .cube.reverse-bottom {
-      transform: rotateX(90deg) rotateY(0deg) rotateZ(0deg); }
+      transform: rotateX(90deg) rotateY(360deg) rotateZ(0deg); }
     #wrap .cube .face {
       top: 0;
       bottom: 0;
@@ -86,18 +86,20 @@ header {
       right: 0;
       color: #666;
       font-size: 18px;
-      box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5); }
+      box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
+      perspective: 1000px; }
     #wrap .cube .front {
-      background-color: #28aadc; }
+      background-color: #28aadc;
+      transform: translateZ(400px); }
     #wrap .cube .back {
       background-color: #ff3366;
-      transform: translateZ(-800px) rotateY(-180deg); }
+      transform: translateZ(-400px) rotateY(-180deg); }
     #wrap .cube .left {
       background-color: #a8238b;
-      transform: translateX(-800px) rotateY(-90deg); }
+      transform: translateX(-400px) rotateY(-90deg); }
     #wrap .cube .right {
       background-color: #000;
-      transform: translateX(800px) rotateY(90deg); }
+      transform: translateX(400px) rotateY(90deg); }
     #wrap .cube .top {
       background-color: #ffad33;
       transform: translateY(-400px) rotateX(90deg); }
