--- a/interestingUI/index.scss
+++ b/interestingUI/index.scss
@@ -1,4 +1,9 @@
-@import './3DNavigationMenu/navigationMenu.scss';
+/**
+ * -------------------- 3DNavigationMenu -----------------------
+ * @import './3DNavigationMenu/navigationMenu.scss';
+ */
+
+@import './FullImageReveal/fullImageReveal.scss';
 
 $marginValue: 15px;
 $borderRadius: 5px;
