--- a/interestingUI/GridLayoutMotion/gridLayoutMotion.css
+++ b/interestingUI/GridLayoutMotion/gridLayoutMotion.css
@@ -2,7 +2,8 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -58,12 +59,18 @@ main .content {
 }
 
 main .content header.codrops-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 15px 10px;
 }
 
 main .content header.codrops-header .codrops-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   white-space: nowrap;
   margin-right: 15px;
