--- a/interestingUI/3DNavigationMenu/navigationMenu.css
+++ b/interestingUI/3DNavigationMenu/navigationMenu.css
@@ -22,6 +22,7 @@ header {
   left: 0;
   right: 0;
   z-index: 2;
+  -webkit-transition: 1s;
   transition: 1s;
 }
 
@@ -78,6 +79,7 @@ header nav > ul li:hover > a {
   bottom: 0;
   right: 0;
   left: 0;
+  -webkit-transition: .8s;
   transition: .8s;
 }
 
@@ -91,33 +93,42 @@ header nav > ul li:hover > a {
 #wrap .cube {
   width: 100%;
   height: 100%;
-  transform-style: preserve-3d;
-  transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+          transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  -webkit-transition: 1s;
   transition: 1s;
 }
 
 #wrap .cube.reverse-front {
-  transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  -webkit-transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+          transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
 }
 
 #wrap .cube.reverse-back {
-  transform: rotateX(180deg) rotateY(0deg) rotateZ(-180deg);
+  -webkit-transform: rotateX(180deg) rotateY(0deg) rotateZ(-180deg);
+          transform: rotateX(180deg) rotateY(0deg) rotateZ(-180deg);
 }
 
 #wrap .cube.reverse-right {
-  transform: rotateX(360deg) rotateY(270deg) rotateZ(0deg);
+  -webkit-transform: rotateX(360deg) rotateY(270deg) rotateZ(0deg);
+          transform: rotateX(360deg) rotateY(270deg) rotateZ(0deg);
 }
 
 #wrap .cube.reverse-left {
-  transform: rotateX(0deg) rotateY(90deg) rotateZ(360deg);
+  -webkit-transform: rotateX(0deg) rotateY(90deg) rotateZ(360deg);
+          transform: rotateX(0deg) rotateY(90deg) rotateZ(360deg);
 }
 
 #wrap .cube.reverse-top {
-  transform: rotateX(-90deg) rotateY(0deg) rotateZ(360deg);
+  -webkit-transform: rotateX(-90deg) rotateY(0deg) rotateZ(360deg);
+          transform: rotateX(-90deg) rotateY(0deg) rotateZ(360deg);
 }
 
 #wrap .cube.reverse-bottom {
-  transform: rotateX(90deg) rotateY(360deg) rotateZ(0deg);
+  -webkit-transform: rotateX(90deg) rotateY(360deg) rotateZ(0deg);
+          transform: rotateX(90deg) rotateY(360deg) rotateZ(0deg);
 }
 
 #wrap .cube .face {
@@ -127,37 +138,45 @@ header nav > ul li:hover > a {
   right: 0;
   color: #666;
   font-size: 18px;
-  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
-  perspective: 1000px;
+  -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
 }
 
 #wrap .cube .front {
   background-color: #28aadc;
-  transform: translateZ(400px);
+  -webkit-transform: translateZ(400px);
+          transform: translateZ(400px);
 }
 
 #wrap .cube .back {
   background-color: #ff3366;
-  transform: translateZ(-400px) rotateY(-180deg);
+  -webkit-transform: translateZ(-400px) rotateY(-180deg);
+          transform: translateZ(-400px) rotateY(-180deg);
 }
 
 #wrap .cube .left {
   background-color: #a8238b;
-  transform: translateX(-400px) rotateY(-90deg);
+  -webkit-transform: translateX(-400px) rotateY(-90deg);
+          transform: translateX(-400px) rotateY(-90deg);
 }
 
 #wrap .cube .right {
   background-color: #000;
-  transform: translateX(400px) rotateY(90deg);
+  -webkit-transform: translateX(400px) rotateY(90deg);
+          transform: translateX(400px) rotateY(90deg);
 }
 
 #wrap .cube .top {
   background-color: #ffad33;
-  transform: translateY(-400px) rotateX(90deg);
+  -webkit-transform: translateY(-400px) rotateX(90deg);
+          transform: translateY(-400px) rotateX(90deg);
 }
 
 #wrap .cube .bottom {
   background-color: #1ed64c;
-  transform: translateY(400px) rotateX(-90deg);
+  -webkit-transform: translateY(400px) rotateX(-90deg);
+          transform: translateY(400px) rotateX(-90deg);
 }
 /*# sourceMappingURL=navigationMenu.css.map */
