--- a/interestingUI/Buttons/buttons.css
+++ b/interestingUI/Buttons/buttons.css
@@ -27,6 +27,7 @@ body {
   border: 2px solid;
   border-bottom-width: 4px;
   padding: 1em 2em;
+  -webkit-transition: color 1s;
   transition: color 1s;
 }
 
@@ -35,9 +36,16 @@ body {
 }
 
 .part-1 .btn-list li .btn-1:hover {
-  animation: halftone 1s forwards;
+  -webkit-animation: halftone 1s forwards;
+          animation: halftone 1s forwards;
   background: radial-gradient(circle, #9c89f7 0.2em, transparent 0.25em) 0 0/1.25em 1.25em, radial-gradient(circle, #9c89f7 0.2em, transparent 0.25em) 6.25em 6.25em/1.25em 1.25em;
   color: #e4f789;
+}
+
+@-webkit-keyframes halftone {
+  100% {
+    background-size: 2.375em 2.375em, 0.1em 0.1em;
+  }
 }
 
 @keyframes halftone {
@@ -51,9 +59,16 @@ body {
 }
 
 .part-1 .btn-list li .btn-2:hover {
-  animation: stripes-move .75s linear infinite;
+  -webkit-animation: stripes-move .75s linear infinite;
+          animation: stripes-move .75s linear infinite;
   background: repeating-linear-gradient(45deg, #82f6d8 0, #82f6d8 0.25em, transparent 0.25em, transparent 0.5em);
   color: #f682a0;
+}
+
+@-webkit-keyframes stripes-move {
+  100% {
+    background-position: 5em 0px;
+  }
 }
 
 @keyframes stripes-move {
@@ -67,9 +82,16 @@ body {
 }
 
 .part-1 .btn-list li .btn-3:hover {
-  animation: sawtooth .35s infinite linear;
+  -webkit-animation: sawtooth .35s infinite linear;
+          animation: sawtooth .35s infinite linear;
   background: linear-gradient(45deg, #d3f169 0.5em, transparent 0.5em) 0 0/1em 1em, linear-gradient(-45deg, #d3f169 0.5em, transparent 0.5em) 0 0/1em 1em;
   color: #8769f1;
+}
+
+@-webkit-keyframes sawtooth {
+  100% {
+    background-position: 1em 0;
+  }
 }
 
 @keyframes sawtooth {
@@ -83,10 +105,17 @@ body {
 }
 
 .part-1 .btn-list li .btn-4:hover {
-  animation: zigzag 1s linear infinite;
+  -webkit-animation: zigzag 1s linear infinite;
+          animation: zigzag 1s linear infinite;
   background: linear-gradient(135deg, rgba(238, 161, 99, 0.25) 0.25em, transparent 0.25em) -0.5em 0, linear-gradient(225deg, rgba(238, 161, 99, 0.25) 0.25em, transparent 0.25em) -0.5em 0, linear-gradient(315deg, rgba(238, 161, 99, 0.25) 0.25em, transparent 0.25em) 0 0, linear-gradient(45deg, rgba(238, 161, 99, 0.25) 0.25em, transparent 0.25em) 0 0;
   background-size: .75em .75em;
   color: #63b0ee;
+}
+
+@-webkit-keyframes zigzag {
+  100% {
+    background-position: 1em 0, 1em 0, -.75em 0, -.75em 0;
+  }
 }
 
 @keyframes zigzag {
@@ -100,9 +129,18 @@ body {
 }
 
 .part-1 .btn-list li .btn-5:hover {
-  animation: blinds .75s linear forwards;
+  -webkit-animation: blinds .75s linear forwards;
+          animation: blinds .75s linear forwards;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(25%, #7cf07f), color-stop(25%, transparent)) 0 0/0.5em 0.5em, -webkit-gradient(linear, left bottom, left top, color-stop(50%, #88d6f3), color-stop(50%, transparent)) 0 0/1em 1em;
   background: linear-gradient(0deg, #7cf07f 25%, transparent 25%) 0 0/0.5em 0.5em, linear-gradient(0deg, #88d6f3 50%, transparent 50%) 0 0/1em 1em;
   color: #f07ced;
+}
+
+@-webkit-keyframes blinds {
+  100% {
+    background-position: 0 0, 0 -3em;
+    background-size: 0 0, 1em 6em;
+  }
 }
 
 @keyframes blinds {
@@ -117,9 +155,20 @@ body {
 }
 
 .part-1 .btn-list li .btn-6:hover {
-  animation: pulse 1s ease-in infinite;
+  -webkit-animation: pulse 1s ease-in infinite;
+          animation: pulse 1s ease-in infinite;
   background: radial-gradient(circle, rgba(249, 135, 155, 0.25) 43%, transparent 50%) 0 0/1em 1em, radial-gradient(circle, rgba(249, 135, 155, 0.25) 43%, transparent 50%) 0.5em 0.5em/2em 2em;
   color: #0bdcb7;
+}
+
+@-webkit-keyframes pulse {
+  50% {
+    background-position: .66em .66em, -.33em -.33em;
+  }
+  100% {
+    background-size: 2em 2em, 1em 1em;
+    background-position: -1.5em -1.5em, -1em -1em;
+  }
 }
 
 @keyframes pulse {
