完善css动画页面

--- a/interestingCSS/PureCSSMoustachedNanny/Animation.css
+++ b/interestingCSS/PureCSSMoustachedNanny/Animation.css
@@ -1946,7 +1946,7 @@
   }
 }
 
-/** -------------------- Shelf__Staff -------------------- */
+/** -------------------- ShelfStaff -------------------- */
 @-webkit-keyframes shelfStaff2Dust1 {
   0% {
     -webkit-transform: translate(0px, 0px);
@@ -2013,6 +2013,442 @@
   100% {
     -webkit-transform: translate(0px, 0px);
             transform: translate(0px, 0px);
+  }
+}
+
+@-webkit-keyframes shelfStaff2Dust2 {
+  0% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  15% {
+    -webkit-transform: translate(-10px, 10px);
+            transform: translate(-10px, 10px);
+  }
+  30% {
+    -webkit-transform: translate(10px, 5px);
+            transform: translate(10px, 5px);
+  }
+  45% {
+    -webkit-transform: translate(20px, 15px);
+            transform: translate(20px, 15px);
+  }
+  60% {
+    -webkit-transform: translate(30px, 35px);
+            transform: translate(30px, 35px);
+  }
+  75% {
+    -webkit-transform: translate(30px, 5px);
+            transform: translate(30px, 5px);
+  }
+  90% {
+    -webkit-transform: translate(10px, 10px);
+            transform: translate(10px, 10px);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+}
+
+@keyframes shelfStaff2Dust2 {
+  0% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  15% {
+    -webkit-transform: translate(-10px, 10px);
+            transform: translate(-10px, 10px);
+  }
+  30% {
+    -webkit-transform: translate(10px, 5px);
+            transform: translate(10px, 5px);
+  }
+  45% {
+    -webkit-transform: translate(20px, 15px);
+            transform: translate(20px, 15px);
+  }
+  60% {
+    -webkit-transform: translate(30px, 35px);
+            transform: translate(30px, 35px);
+  }
+  75% {
+    -webkit-transform: translate(30px, 5px);
+            transform: translate(30px, 5px);
+  }
+  90% {
+    -webkit-transform: translate(10px, 10px);
+            transform: translate(10px, 10px);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+}
+
+@-webkit-keyframes shelfStaff2Dust3 {
+  0% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  15% {
+    -webkit-transform: translate(10px, 10px);
+            transform: translate(10px, 10px);
+  }
+  30% {
+    -webkit-transform: translate(20px, 0px);
+            transform: translate(20px, 0px);
+  }
+  45% {
+    -webkit-transform: translate(0px, -10px);
+            transform: translate(0px, -10px);
+  }
+  60% {
+    -webkit-transform: translate(-7px, 10px);
+            transform: translate(-7px, 10px);
+  }
+  75% {
+    -webkit-transform: translate(-17px, 17px);
+            transform: translate(-17px, 17px);
+  }
+  90% {
+    -webkit-transform: translate(4px, 22px);
+            transform: translate(4px, 22px);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+}
+
+@keyframes shelfStaff2Dust3 {
+  0% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  15% {
+    -webkit-transform: translate(10px, 10px);
+            transform: translate(10px, 10px);
+  }
+  30% {
+    -webkit-transform: translate(20px, 0px);
+            transform: translate(20px, 0px);
+  }
+  45% {
+    -webkit-transform: translate(0px, -10px);
+            transform: translate(0px, -10px);
+  }
+  60% {
+    -webkit-transform: translate(-7px, 10px);
+            transform: translate(-7px, 10px);
+  }
+  75% {
+    -webkit-transform: translate(-17px, 17px);
+            transform: translate(-17px, 17px);
+  }
+  90% {
+    -webkit-transform: translate(4px, 22px);
+            transform: translate(4px, 22px);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+}
+
+@-webkit-keyframes shelfStaff2Dust4 {
+  0% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  15% {
+    -webkit-transform: translate(4px, 12px);
+            transform: translate(4px, 12px);
+  }
+  30% {
+    -webkit-transform: translate(-16px, 7px);
+            transform: translate(-16px, 7px);
+  }
+  45% {
+    -webkit-transform: translate(-22px, 17px);
+            transform: translate(-22px, 17px);
+  }
+  60% {
+    -webkit-transform: translate(-12px, 7px);
+            transform: translate(-12px, 7px);
+  }
+  75% {
+    -webkit-transform: translate(-2px, -3px);
+            transform: translate(-2px, -3px);
+  }
+  90% {
+    -webkit-transform: translate(18px, 7px);
+            transform: translate(18px, 7px);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+}
+
+@keyframes shelfStaff2Dust4 {
+  0% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  15% {
+    -webkit-transform: translate(4px, 12px);
+            transform: translate(4px, 12px);
+  }
+  30% {
+    -webkit-transform: translate(-16px, 7px);
+            transform: translate(-16px, 7px);
+  }
+  45% {
+    -webkit-transform: translate(-22px, 17px);
+            transform: translate(-22px, 17px);
+  }
+  60% {
+    -webkit-transform: translate(-12px, 7px);
+            transform: translate(-12px, 7px);
+  }
+  75% {
+    -webkit-transform: translate(-2px, -3px);
+            transform: translate(-2px, -3px);
+  }
+  90% {
+    -webkit-transform: translate(18px, 7px);
+            transform: translate(18px, 7px);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+}
+
+@-webkit-keyframes shelfHerbs1 {
+  0% {
+    -webkit-transform: rotate(7deg);
+            transform: rotate(7deg);
+  }
+  50% {
+    -webkit-transform: rotate(-7deg);
+            transform: rotate(-7deg);
+  }
+  100% {
+    -webkit-transform: rotate(7deg);
+            transform: rotate(7deg);
+  }
+}
+
+@keyframes shelfHerbs1 {
+  0% {
+    -webkit-transform: rotate(7deg);
+            transform: rotate(7deg);
+  }
+  50% {
+    -webkit-transform: rotate(-7deg);
+            transform: rotate(-7deg);
+  }
+  100% {
+    -webkit-transform: rotate(7deg);
+            transform: rotate(7deg);
+  }
+}
+
+@-webkit-keyframes shelfHerbs2 {
+  0% {
+    -webkit-transform: rotate(-22deg);
+            transform: rotate(-22deg);
+  }
+  50% {
+    -webkit-transform: rotate(-13deg);
+            transform: rotate(-13deg);
+  }
+  100% {
+    -webkit-transform: rotate(-22deg);
+            transform: rotate(-22deg);
+  }
+}
+
+@keyframes shelfHerbs2 {
+  0% {
+    -webkit-transform: rotate(-22deg);
+            transform: rotate(-22deg);
+  }
+  50% {
+    -webkit-transform: rotate(-13deg);
+            transform: rotate(-13deg);
+  }
+  100% {
+    -webkit-transform: rotate(-22deg);
+            transform: rotate(-22deg);
+  }
+}
+
+@-webkit-keyframes shelfHerbs3 {
+  0% {
+    -webkit-transform: rotate(-1deg);
+            transform: rotate(-1deg);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  100% {
+    -webkit-transform: rotate(-1deg);
+            transform: rotate(-1deg);
+  }
+}
+
+@keyframes shelfHerbs3 {
+  0% {
+    -webkit-transform: rotate(-1deg);
+            transform: rotate(-1deg);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  100% {
+    -webkit-transform: rotate(-1deg);
+            transform: rotate(-1deg);
+  }
+}
+
+@-webkit-keyframes shelfHerbs4 {
+  0% {
+    -webkit-transform: rotate(1deg);
+            transform: rotate(1deg);
+  }
+  50% {
+    -webkit-transform: rotate(-9deg);
+            transform: rotate(-9deg);
+  }
+  100% {
+    -webkit-transform: rotate(1deg);
+            transform: rotate(1deg);
+  }
+}
+
+@keyframes shelfHerbs4 {
+  0% {
+    -webkit-transform: rotate(1deg);
+            transform: rotate(1deg);
+  }
+  50% {
+    -webkit-transform: rotate(-9deg);
+            transform: rotate(-9deg);
+  }
+  100% {
+    -webkit-transform: rotate(1deg);
+            transform: rotate(1deg);
+  }
+}
+
+/** -------------------- DriedFlower -------------------- */
+@-webkit-keyframes driedFlower {
+  0% {
+    -webkit-transform: rotate(4deg);
+            transform: rotate(4deg);
+  }
+  50% {
+    -webkit-transform: rotate(-6deg);
+            transform: rotate(-6deg);
+  }
+  100% {
+    -webkit-transform: rotate(4deg);
+            transform: rotate(4deg);
+  }
+}
+@keyframes driedFlower {
+  0% {
+    -webkit-transform: rotate(4deg);
+            transform: rotate(4deg);
+  }
+  50% {
+    -webkit-transform: rotate(-6deg);
+            transform: rotate(-6deg);
+  }
+  100% {
+    -webkit-transform: rotate(4deg);
+            transform: rotate(4deg);
+  }
+}
+
+/** -------------------- Bat -------------------- */
+@-webkit-keyframes bat {
+  0% {
+    -webkit-transform: rotate(10deg) scaleY(1.05);
+            transform: rotate(10deg) scaleY(1.05);
+  }
+  25% {
+    -webkit-transform: rotate(0deg) scaleY(0.8);
+            transform: rotate(0deg) scaleY(0.8);
+  }
+  50% {
+    -webkit-transform: rotate(-10deg) scaleY(1.05);
+            transform: rotate(-10deg) scaleY(1.05);
+  }
+  75% {
+    -webkit-transform: rotate(0deg) scaleY(0.8);
+            transform: rotate(0deg) scaleY(0.8);
+  }
+  100% {
+    -webkit-transform: rotate(10deg) scaleY(1.05);
+            transform: rotate(10deg) scaleY(1.05);
+  }
+}
+@keyframes bat {
+  0% {
+    -webkit-transform: rotate(10deg) scaleY(1.05);
+            transform: rotate(10deg) scaleY(1.05);
+  }
+  25% {
+    -webkit-transform: rotate(0deg) scaleY(0.8);
+            transform: rotate(0deg) scaleY(0.8);
+  }
+  50% {
+    -webkit-transform: rotate(-10deg) scaleY(1.05);
+            transform: rotate(-10deg) scaleY(1.05);
+  }
+  75% {
+    -webkit-transform: rotate(0deg) scaleY(0.8);
+            transform: rotate(0deg) scaleY(0.8);
+  }
+  100% {
+    -webkit-transform: rotate(10deg) scaleY(1.05);
+            transform: rotate(10deg) scaleY(1.05);
+  }
+}
+
+@-webkit-keyframes batEye {
+  95% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+  }
+  98% {
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+  }
+}
+
+@keyframes batEye {
+  95% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+  }
+  98% {
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
   }
 }
 /*# sourceMappingURL=Animation.css.map */
