--- a/interestingCSS/PureCSSMoustachedNanny/Animation.scss
+++ b/interestingCSS/PureCSSMoustachedNanny/Animation.scss
@@ -274,7 +274,7 @@
   100%  { transform: rotate(0deg); }
 }
 
-/** -------------------- Shelf__Staff -------------------- */
+/** -------------------- ShelfStaff -------------------- */
 @keyframes shelfStaff2Dust1 {
   0%   { transform: translate(0px, 0px); }
   15%  { transform: translate(10px, -5px); }
@@ -284,4 +284,83 @@
   75%  { transform: translate(-20px, 15px); }
   90%  { transform: translate(-10px, 5px); }
   100% { transform: translate(0px, 0px); }
+}
+
+@keyframes shelfStaff2Dust2 {
+  0%   { transform: translate(0px, 0px); }
+  15%  { transform: translate(-10px, 10px); }
+  30%  { transform: translate(10px, 5px); }
+  45%  { transform: translate(20px, 15px); }
+  60%  { transform: translate(30px, 35px); }
+  75%  { transform: translate(30px, 5px); }
+  90%  { transform: translate(10px, 10px); }
+  100% { transform: translate(0px, 0px); }
+}
+
+@keyframes shelfStaff2Dust3 {
+    0%   { transform: translate(0px, 0px); }
+    15%  { transform: translate(10px, 10px); }
+    30%  { transform: translate(20px, 0px); }
+    45%  { transform: translate(0px, -10px); }
+    60%  { transform: translate(-7px, 10px); }
+    75%  { transform: translate(-17px, 17px); }
+    90%  { transform: translate(4px, 22px); }
+    100% { transform: translate(0px, 0px); }
+}
+
+@keyframes shelfStaff2Dust4 {
+  0%   { transform: translate(0px, 0px); }
+  15%  { transform: translate(4px, 12px); }
+  30%  { transform: translate(-16px, 7px); }
+  45%  { transform: translate(-22px, 17px); }
+  60%  { transform: translate(-12px, 7px); }
+  75%  { transform: translate(-2px, -3px); }
+  90%  { transform: translate(18px, 7px); }
+  100% { transform: translate(0px, 0px); }
+}
+
+@keyframes shelfHerbs1 {
+  0%  { transform: rotate(7deg); }
+  50% { transform: rotate(-7deg); }
+  100%{ transform: rotate(7deg); }
+}
+
+@keyframes shelfHerbs2 {
+  0%  { transform: rotate(-22deg); }
+  50% { transform: rotate(-13deg); }
+  100%{ transform: rotate(-22deg); }
+}
+
+@keyframes shelfHerbs3 {
+  0%  { transform: rotate(-1deg); }
+  50% { transform: rotate(10deg); }
+  100%{ transform: rotate(-1deg); }
+}
+
+@keyframes shelfHerbs4 {
+    0%  { transform: rotate(1deg); }
+    50% { transform: rotate(-9deg); }
+    100%{ transform: rotate(1deg); }
+}
+
+/** -------------------- DriedFlower -------------------- */
+@keyframes driedFlower {
+  0%  { transform: rotate(4deg); }
+  50% { transform: rotate(-6deg); }
+  100%{ transform: rotate(4deg); }
+}
+
+/** -------------------- Bat -------------------- */
+@keyframes bat {
+  0%  { transform: rotate(10deg) scaleY(1.05); }
+  25% { transform: rotate(0deg) scaleY(0.8); }
+  50% { transform: rotate(-10deg) scaleY(1.05); }
+  75% { transform: rotate(0deg) scaleY(0.8); }
+  100%{ transform: rotate(10deg) scaleY(1.05); }
+}
+
+@keyframes batEye {
+  95% { transform: scaleY(1); }
+  98% { transform: scaleY(0); }
+  100%{ transform: scaleY(1); }
 }
