--- a/interestingCSS/PureCSSMoustachedNanny/PureCSSMoustachedNanny.scss
+++ b/interestingCSS/PureCSSMoustachedNanny/PureCSSMoustachedNanny.scss
@@ -14,6 +14,7 @@ body {
   width: 800px;
   height: 600px;
   overflow: hidden;
+ // filter: brightness(2);
 
   *, *::before, *::after {
     content: '';
@@ -1481,5 +1482,395 @@ body {
     height: 66px;
     border-radius: 50%;
     background: radial-gradient(#32323c 20%, transparent 21%, transparent 50%, #32323c 51%);
+  }
+}
+
+.moth {
+  top: 43px;
+  left: 340px;
+  width: 8px;
+  height: 34px;
+  border-radius: 4px;
+  background: #263449;
+  transform-origin: 4px 4px;
+  transform: rotate(30deg);
+  animation: moth 1.5s infinite;
+  will-change: transform;
+
+  &::before {
+    top: 35px;
+    left: 5px;
+    width: 12px;
+    height: 12px;
+    background: #304252;
+    border-radius: 50%;
+    box-shadow: -15px 0 0 0 #304252, -8px -3px 0 3px #263449;
+  }
+
+  &__wings {
+    &::before {
+      top: 1px;
+      left: -4px;
+      border-left: 12px solid transparent;
+      border-right: 12px solid transparent;
+      border-top: 31px solid #1c596c;
+      border-radius: 20px 20px 0 0;
+      transform-origin: bottom center;
+      transform: rotate(40deg);
+      animation: mothWingRight 1.5s infinite; 
+    }
+
+    &::after {
+      top: 1px;
+      left: -14px;
+      border-left: 12px solid transparent;
+      border-right: 12px solid transparent;
+      border-top: 31px solid #1c596c;
+      border-radius: 20px 20px 0 0;
+      transform-origin: bottom center;
+      transform: rotate(-43deg);
+      animation: mothWingLeft 1.5s infinite;
+      will-change: transform;
+    }
+  }
+}
+
+/** -------------------- Alchemist -------------------- */
+.alchemist {
+  top: 114px;
+  left: 250px;
+  width: 307px;
+  height: 486px;
+  z-index: 1;
+
+  &__arm-r {
+    top: 256px;
+    left: 194px;
+    width: 24px;
+    height: 80px;
+    border-radius: 12px;
+    background: #9c735a;
+    transform-origin: 12px 12px;
+    transform: rotate(-38deg);
+    animation: alchemistRightArm 30s linear infinite;
+
+    &::before {
+      top: 56px;
+      left: 0px;
+      width: 24px;
+      height: 84px;
+      border-radius: 12px;
+      background: #9c735a;
+      transform-origin: 12px 12px;
+      transform: rotate(36deg);
+      animation: alchemistRightForearm 30s linear infinite;
+
+    }
+  }
+
+  &__arm-l {
+    top: 256px;
+    left: 104px;
+    width: 24px;
+    height: 80px;
+    border-radius: 12px;
+    background: #9c735a;
+    transform-origin: 12px 12px;
+    transform: rotate(38deg);
+    animation: alchemistLeftArm 30s linear infinite;
+
+    &::before {
+      top: 56px;
+      left: 0px;
+      width: 24px;
+      height: 84px;
+      border-radius: 12px;
+      background: #9c735a;
+      transform-origin: 12px 12px;
+      transform: rotate(-22deg);
+      animation: alchemistLeftForearm 30s linear infinite;
+    }
+  }
+
+  &__leg-r {
+    top: 400px;
+    left: 178px;
+    width: 27px;
+    height: 54px;
+    background: linear-gradient(to bottom, #424241 88%, #312e36 88%);
+
+    &::before {
+      top: 54px;
+      left: -12px;
+      width: 52px;
+      height: 18px;
+      border-radius: 20px 20px 0 0;
+      background: linear-gradient(to bottom, #464230 70%, #5a5a4a 70%);
+    }
+  }
+
+  &__leg-l {
+    top: 400px;
+    left: 102px;
+    width: 27px;
+    height: 54px;
+    background: linear-gradient(to bottom, #424241 80%, #312e36 80%);
+    transform-origin: top center;
+    animation: alchemistLeftLeg 30s linear infinite;
+
+    &::before {
+      top: 54px;
+      left: -12px;
+      width: 52px;
+      height: 18px;
+      border-radius: 20px 20px 0 0;
+      background: linear-gradient(to bottom, #464230 70%, #5a5a4a 70%);
+    }
+  }
+
+  &__beard {
+    top: 110px;
+    left: 60px;
+    width: 10px;
+    height: 99px;
+    border-left: 42px solid #7b4a31;
+    border-bottom: 11px solid #7b4a31;
+    border-radius: 0 0 11px 30px;
+    animation: alchemistBeard 30s linear infinite;
+
+    &::before {
+      top: 0px;
+      left: -94px;
+      width: 10px;
+      height: 99px;
+      border-right: 42px solid #845239;
+      border-bottom: 11px solid #845239;
+      border-radius: 0 0 30px 11px;
+    }
+  }
+
+  &__ear-r {
+    top: 19px;
+    left: 97px;
+    width: 67px;
+    height: 34px;
+    border-radius: 0 0 40px 40px;
+    background: #ffcea5;
+    z-index: -1;
+    transform: rotate(-46deg);
+    animation: alchemistRightEar 30s linear infinite;
+
+    &::before {
+      top: 7px;
+      left: 28px;
+      width: 15px;
+      height: 20px;
+      border-radius: 7px;
+      background: #cf9574;
+      transform: rotate(46deg);
+    }
+  }
+
+  &__ear-l {
+    top: 19px;
+    left: -42px;
+    width: 67px;
+    height: 34px;
+    border-radius: 0 0 40px 40px;
+    background: #ffcea5;
+    transform: rotate(46deg);
+    z-index: -1;
+    animation: alchemistLeftEar 30s linear infinite;
+
+    &::before {
+      top: 7px;
+      left: 24px;
+      width: 15px;
+      height: 20px;
+      border-radius: 7px;
+      background: #cd9574;
+      transform: rotate(-46deg);
+    }
+  }
+
+  &__eye-r {
+    top: 50px;
+    left: 63px;
+    z-index: 1;
+    animation: alchemistRightEye 30s linear infinite;
+
+    &::before {
+      top: -38px;
+      left: 2px;
+      width: 57px;
+      height: 30px;
+      border-radius: 0 0 30px 30px;
+      background: linear-gradient(to bottom, transparent 21%, #ffffce 21%);
+      transform: rotate(-43deg);
+      animation: alchemistRightBrow 30s linear infinite;
+    }
+
+    &::after {
+      top: -4px;
+      left: 7px;
+      width: 22px;
+      height: 9px;
+      border-radius: 5px;
+      background: #313139;
+    }
+  }
+
+  &__eye-l {
+    top: 50px;
+    left: 22px;
+    z-index: 1;
+    animation: alchemistLeftEye 30s linear infinite;
+
+    &::before {
+      top: -38px;
+      left: -22px;
+      width: 57px;
+      height: 30px;
+      border-radius: 0 0 30px 30px;
+      background: linear-gradient(to bottom, transparent 21%, #ffffce 21%);
+      transform: rotate(43deg);
+      animation: alchemistLeftBrow 30s linear infinite;
+    }
+
+    &::after {
+      top: -11px;
+      left: 4px;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      border: 6px solid #313139;
+      background: linear-gradient(to bottom, #3193ae 50%, #29f2f2 50%);
+    }
+  }
+
+  &__head {
+    top: 123px;
+    left: 94px;
+    width: 120px;
+    height: 110px;
+    border-radius: 30px 30px 24px 24px;
+    background: #ffcea5;
+    transform-origin: bottom center;
+    animation: alchemistHead 30s linear infinite;
+
+    &::before {
+      top: 59px;
+      left: 5px;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background: #f7857c;
+      box-shadow: 80px 0 0 0 #f7857c;
+      animation: alchemistCheeks 30s linear infinite;
+    }
+
+    &::after {
+      top: 54px;
+      left: 20px;
+      border-left: 40px solid transparent;
+      border-right: 40px solid transparent;
+      border-top: 42px solid #ffcea5;
+      animation: alchemistNose 30s linear infinite;
+    }
+  }
+
+  &__mustache {
+    top: 97px;
+    left: 42px;
+    animation: alchemistMustache 30s linear infinite;
+
+    &::before {
+      top: -41px;
+      left: -81px;
+      width: 134px;
+      height: 80px;
+      border-radius: 90px 62px 0 0;
+      background: linear-gradient(180deg, #ffffce 50%, transparent 50%);
+      transform-origin: 98px 41px;
+      transform: rotate(-46deg);
+    }
+
+    &::after {
+      top: -41px;
+      left: -18px;
+      width: 134px;
+      height: 80px;
+      border-radius: 62px 90px 0 0;
+      background: linear-gradient(180deg, #ffffce 50%, transparent 50%);
+      transform-origin: 36px 41px;
+      transform: rotate(46deg);
+    }
+  }
+
+  &__hat {
+    top: 120px;
+    left: 192px;
+    width: 98px;
+    height: 37px;
+    border-radius: 8px 0 100px 0;
+    background: #f78c42;
+    animation: alchemistHat 30s linear infinite;
+
+    &::before {
+      top: 32px;
+      left: 15px;
+      width: 40px;
+      height: 40px;
+      border-radius: 0 0 40px 0;
+      background: #f78c42;
+      transform: rotate(40deg);
+    }
+  }
+
+  &__hat-1{
+    top: 0px;
+    left: -170px;
+    width: 100px;
+    height: 39px;
+    border-radius: 0 0 0 40px;
+    background: #f78c42;
+    box-shadow: inset 11px 11px 0 0 #f7e773;
+
+    &::before {
+      top: 31px;
+      left: 40px;
+      width: 40px;
+      height: 39px;
+      border-radius: 0 0 0 40px;
+      background: #f7e773;
+      transform: rotate(-45deg);
+    }
+
+    &::after {
+      top: -43px;
+      left: -16px;
+      width: 157px;
+      height: 63px;
+      border-radius: 0 0 0 100px;
+      background: #f78c42;
+    }
+  }
+
+  &__hat-2 {
+    top: -88px;
+    left: -192px;
+    width: 23px;
+    height: 28px;
+    border-radius: 20px 0;
+    background: #de7352;
+
+    &::before {
+      top: 23px;
+      left: 0px;
+      width: 163px;
+      height: 71px;
+      border-radius: 0 0 0 70px;
+      background: linear-gradient(193deg, transparent 38%, #de7352 20%);
+    }
   }
 }
